--- a/.github/main.yml
+++ b/.github/main.yml
@@ -1,3 +1,5 @@
+name: Test Skip
+
 on: push
 
 jobs:
@@ -7,14 +9,15 @@ jobs:
       - run: echo "start"
 
   middle:
-    needs: start
-    runs-on: ubuntu-latest
+    needs: [start]
     if: false
+    runs-on: ubuntu-latest
     steps:
-      - run: echo "middle"
+      - run: echo "This should never run"
 
   finish:
-    needs: middle
+    needs: [middle]
     runs-on: ubuntu-latest
+    if: always()
     steps:
-      - run: echo "finish"
+      - run: echo "Finish job"
